--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #000; 
+  color: #fff; 
+  
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
